# uProtocols

./: .gitignore  LICENSE  README.md
CAN/: README.md
CAN/CANopen/: README.md
CAN/docs/: 01_CAN_Bus_Architecture_and_Physical_Layer.md  02_CAN_Frame_Structure.md  03_Bit_Timing_and_Synchronization.md  04_Arbitration_and_Priority.md  05_Error_Detection_Mechanisms.md  06_CAN_2_0A_vs_2_0B_Standards.md  07_CAN_FD_Flexible_Data_Rate.md  08_CAN_XL_Protocol.md  09_ISO_TP_ISO_15765_2.md  100_Future_of_CAN_Technology.md  10_CANopen_Protocol.md  11_CAN_Controller_Integration.md  12_CAN_Transceiver_Selection.md  13_Hardware_Filtering_and_Masking.md  14_DMA_for_CAN_Reception.md  15_Timestamp_and_Time_Synchronization.md  16_SocketCAN_on_Linux.md  17_Ring_Buffers_for_CAN_Queuing.md  18_Interrupt_Driven_CAN_Handling.md  19_Message_Scheduling_Strategies.md  20_Zero_Copy_Message_Processing.md  21_UDS_Unified_Diagnostic_Services.md  22_OBD_II_over_CAN.md  23_CAN_Bus_Monitoring_and_Sniffing.md  24_Error_Frame_Injection.md  25_Bus_Load_Calculation.md  26_CAN_Bus_Authentication.md  27_Secure_Onboard_Communication_SecOC.md  28_Intrusion_Detection_Systems.md  (+71 more)
CommonAPI/: README.md
I2C/: README.md
MQTT/: README.md
Modbus/: README.md  gen.sh
Profibus/: README.md
Protobuf/: README.md
Protobuf/src/101/files/cpp/: CMakeLists.txt  writer.cpp
REST/: README.md
SPI/: README.md
TCPIP/: README.md  gen.sh
TCPIP/src/52/rust/: Cargo.toml  arp_implementation.rs
UART/: README.md
WebSocket/: README.md
gRPC/: README.md
i2c/: README.md  gen.sh
someIP/: README.md
(+1121 files in other folders)
